welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: not found: type string
var ordre : string =""
            ^BDR2:2: error: not found: type boolean
var fini : boolean =false
           ^